--- a/src/scss/utilities/_flow-section.scss
+++ b/src/scss/utilities/_flow-section.scss
@@ -3,3 +3,7 @@
 .flow-section > * + * {
   margin-block-start: max(8vh, 2rem);
 }
+
+main.flow-section {
+  margin-block-start: max(4vh, 1rem);
+}
